# 11ROSSample

./: CMakeLists.txt  README.md  package.xml
launch/: opencv_faceimage_saver.launch
scripts/: faceimage_saver.py
